# practical_rag_notes_assistant

./: .env.example  .gitignore  README.md  pyproject.toml
src/practical_rag_notes_assistant/: __init__.py  cli.py  config.py  index.py  ingest.py  query.py
src/practical_rag_notes_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
